# litserve-template

./: Dockerfile.example  README.md  main.py  pyproject.toml
litserve/: __init__.py  entrypoint.py
